--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,61 @@
 /*  your css code here. If applicable */
+#outer{
+	background-color:#ff0000;
+	height:300px;
+	width:300px;
+	border-radius:50%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+#middle{
+	background-color:#ffa500;
+	height:250px;
+	width:250px;
+	border-radius:50%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+#inner{
+	background-color:#ffff00;
+	height:200px;
+	width:200px;
+	border-radius:50%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+
+#green{
+	background-color:#008000;
+	height:150px;
+	width:150px;
+	border-radius:50%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+
+#blue{
+	background-color:#0000ff;
+	height:100px;
+	width:100px;
+	border-radius:50%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+#voilet{
+	background-color:#800080;
+	height:50px;
+	width:50px;
+	border-radius:50%;
+	/* display:flex;
+	justify-content:center;
+	align-items:center; */
+}
