--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 	background-color:rgb(255, 165, 0);
 	height:300px;
 	width:300px;
+	border:25px solid rgb(255,0,0); 
 	border-radius:50%;
 	display:flex;
 	justify-content:center;
