--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 	align-items:center;
 }
 #middle{
-	background-color:#ffa500;
+	background-color:rgb(0,128,0);
 	height:200px;
 	width:200px;
 	border-radius:50%;
@@ -20,7 +20,7 @@
 }
 
 #inner{
-	background-color:#ffff00;
+	background-color:rgb(128,0,128);
 	height:100px;
 	width:100px;
 	border-radius:50%;
