--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 	background-color:rgb(0,128,0);
 	height:200px;
 	width:200px;
+	border:25px solid rgb(255,255,0)
 	border-radius:50%;
 	display:flex;
 	justify-content:center;
@@ -27,6 +28,7 @@
 	display:flex;
 	justify-content:center;
 	align-items:center;
+	margin:25px;
 }
 
 
