--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 	background-color:rgb(0,128,0);
 	height:200px;
 	width:200px;
-	border:25px solid rgb(255,255,0)
+	border:25px solid rgb(255,255,0);
 	border-radius:50%;
 	display:flex;
 	justify-content:center;
@@ -24,6 +24,7 @@
 	background-color:rgb(128,0,128);
 	height:100px;
 	width:100px;
+	border:2px solid rgb(0,0,255);
 	border-radius:50%;
 	display:flex;
 	justify-content:center;
