--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 	border:25px solid rgb(255,255,0);
 	border-radius:50%;
 	display:flex;
+	margin:25px;
 	justify-content:center;
 	align-items:center;
 }
@@ -24,7 +25,7 @@
 	background-color:rgb(128,0,128);
 	height:100px;
 	width:100px;
-	border:2px solid rgb(0,0,255);
+	border:25px solid rgb(0,0,255);
 	border-radius:50%;
 	display:flex;
 	justify-content:center;
